# AudioGetter

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Util.cmake  cpm.cmake
notebooks/: Magenta_RT_Demo.ipynb
plugin/: CMakeLists.txt
plugin/include/CursorAudio/: PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
